修复jenkins mvn打包报错